[package]
name = "deucalion"
version = "0.1.0"
authors = ["Dmitry Trefilov <the-alien@live.ru>"]

[dependencies]
prometheus = { version = "0.2" }
lazy_static = { version = "0.2.1" }
hyper =  { version = "0.10" }
rusoto = { version = "0.22.0", features = [ "ec2", "cloudwatch" ] }
dotenv = { version = "0.8.0" }
ctrlc = { version = "2.0", features = ["termination"] }

[profile.release]
lto = true
