[package]
name = "deucalion"
version = "0.1.0"
authors = ["Dmitry Trefilov <the-alien@live.ru>"]

[dependencies]
prometheus = { version = "0.2" }
hyper =  { version = "0.10" }
rusoto = { version = "0.23.0", features = [ "ec2", "cloudwatch" ] }
dotenv = { version = "0.8.0" }
ctrlc = { version = "2.0", features = ["termination"] }
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
time = "0.1"
itertools = "0.6.0"
log = "0.3.6"
env_logger = "0.4.2"

[profile.release]
lto = true
